force-app/main/default/objects/FEC_Asset__c/FEC_Asset__c.object-meta.xml
<CustomObject>
    <label>Asset</label>
    <nameField>
        <displayFormat>AN - {0}</displayFormat>
        <label>Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>