force-app/main/default/objects/FEC_Asset__c/fields/FEC_Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>FEC_Additional_Info__c</fullName>
    <label>Additional Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>