force-app/main/default/objects/FEC_Asset__c/fields/FEC_Amount_Pledged__c.field-meta.xml
<CustomField>
    <fullName>FEC_Amount_Pledged__c</fullName>
    <label>Amount Pledged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>