force-app/main/default/objects/FEC_Asset__c/fields/FEC_Asset_Cost__c.field-meta.xml
<CustomField>
    <fullName>FEC_Asset_Cost__c</fullName>
    <label>Asset Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>