force-app/main/default/objects/FEC_Asset__c/fields/FEC_Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Asset_Type__c</fullName>
    <label>Asset Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>