force-app/main/default/objects/FEC_Asset__c/fields/FEC_Bought_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Bought_Date__c</fullName>
    <label>Bought Date</label>
    <type>Date</type>
</CustomField>