force-app/main/default/objects/FEC_Asset__c/fields/FEC_Category_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Category_Code__c</fullName>
    <label>Category Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>