force-app/main/default/objects/FEC_Asset__c/fields/FEC_Chasis_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_Chasis_No__c</fullName>
    <label>Chasis No.</label>
    <length>80</length>
    <type>Text</type>
</CustomField>