force-app/main/default/objects/FEC_Asset__c/fields/FEC_Engine_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_Engine_No__c</fullName>
    <label>Engine No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>