force-app/main/default/objects/FEC_Asset__c/fields/FEC_Make_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Make_Date__c</fullName>
    <label>Make Date</label>
    <type>Date</type>
</CustomField>