force-app/main/default/objects/FEC_Asset__c/fields/FEC_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>FEC_Reg_No__c</fullName>
    <label>Reg No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>