force-app/main/default/objects/FEC_Asset__c/fields/FEC_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>